--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,12 +12,17 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
       "es2018",
       "dom"
     ]
   },
   "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
     "enableI18nLegacyMessageIdFormat": false
   }
 }
