--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,6 +23,7 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
+    "strictDomEventTypes": false,
     "enableI18nLegacyMessageIdFormat": false
   }
 }
